Don't index storybook docs

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,3 +1,4 @@
 <link rel="icon" type="image/png" href="logo.png" />
 <link rel="stylesheet" type="text/css" href="css/fonts.css" />
 <link rel="stylesheet" type="text/css" href="index.css" />
+<meta name="robots" content="noindex">
